--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,21 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.1
+
+**Release Date**: April 9, 2018
+
+#### Features
+* Add --artifact-path for backup, to enable specifying where the backup artifacts should go 
+
+#### Bug Fixes
+
+None
+
+#### Known Issues
+
+None
+
 ### <a id='1.2'></a> v1.2.0
 
 **Release Date**: February 22, 2018
