edit RNs PR 30[#156719123]
Put code ticks around the double hyphen so markdown doesn't render it as an en-dash.

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -10,7 +10,8 @@ owner: Release Engineering
 **Release Date**: April 9, 2018
 
 #### Features
-* Add --artifact-path for backup, to enable specifying where the backup artifacts should go 
+
+* Adds `--artifact-path` for backup to enable specifying where the backup artifacts should go 
 
 #### Bug Fixes
 
@@ -25,7 +26,7 @@ None
 **Release Date**: February 22, 2018
 
 #### Features
-* Call lock and unlock scripts in parallel to reduce API downtime. 
+* Call lock and unlock scripts in parallel to reduce API downtime 
 
 #### Bug Fixes
 
