--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,22 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.2
+
+**Release Date**: April 18, 2018
+
+#### Features
+
+None
+
+#### Bug Fixes
+
+Fix ssh issue introduced by calling backup scripts in parallel.
+
+#### Known Issues
+
+None
+
 ### <a id='1.2'></a> v1.2.1
 
 **Release Date**: April 9, 2018
