--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -60,12 +60,16 @@ Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Susp
  
     This ensures that each file in your buckets has a valid version ID.
 
-3. After enabling versioning, you have a current version and zero or more non-current versions for each object. 
-We recommend setting a retention policy on your buckets to delete old non-current versions and minimize storage costs. 
-See the <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">AWS documentation</a>.</p>
+3. After enabling versioning, you have a current version and zero or more non-current versions for each object.
+<div class="note warning">
+  <strong>WARNING</strong>:
+    We strongly recommend setting an expiration policy on your buckets to delete old non-current versions and minimize storage costs.
+    See the <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">AWS documentation</a>.
+</div>
+</p>
 
 <p class="note"><strong>Note</strong>: If your blobstore uses S3-compatible buckets not from Amazon, 
-see the documentation for that storage provider to enable versioning.</p>
+see the documentation for that storage provider to enable versioning and set an expiration policy.</p>
 
 ## <a id="enable-replication"></a> Enable Replication on Your External Blobstore
 
