--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -69,7 +69,7 @@ Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Susp
 </p>
 
 <p class="note"><strong>Note</strong>: If your blobstore uses S3-compatible buckets not from Amazon, 
-see the documentation for that storage provider to enable versioning and set an expiration policy.</p>
+see the documentation for that storage provider regarding enabling versioning and setting an expiration policy.</p>
 
 ## <a id="enable-replication"></a> Enable Replication on Your External Blobstore
 
