--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -63,7 +63,7 @@ Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Susp
 3. After enabling versioning, you have a current version and zero or more non-current versions for each object.
 <div class="note warning">
   <strong>WARNING</strong>:
-    We strongly recommend setting an expiration policy on your buckets to delete old non-current versions and minimize storage costs. For more information, see the <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">Example 6: Specifying a Lifecycle Rule for a Versioning-Enabled Bucket</a> in the Amazon Simple Storage Service documentation.
+    We strongly recommend setting an expiration policy on your buckets to delete old non-current versions and minimize storage costs. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">Example 6: Specifying a Lifecycle Rule for a Versioning-Enabled Bucket</a> in the Amazon Simple Storage Service documentation.
 </div>
 </p>
 
