--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -141,7 +141,8 @@ Follow the instructions in the Amazon S3 documentation, [How Do I Enable or Susp
 </p>
 
 <p class="note"><strong>Note</strong>: If your blobstore uses S3-compatible buckets not from Amazon,
-see the documentation for that storage provider regarding enabling versioning and setting an expiration policy.</p>
+see the documentation for that storage provider regarding enabling versioning and setting an expiration policy.
+</p>
 
 ### <a id="enable-s3-versioned-replication"></a> Enable Replication on Your Versioned S3-Compatible Blobstore
 
