Add note about GDPR to BBR docs
[#157961259]

Signed-off-by: Josh Hill <jhill@pivotal.io>

--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -276,3 +276,5 @@ Keep your backup artifact safe by following these steps:
 
 1. Each time you redeploy Cloud Foundry, test your backup artifact 
    by following the procedures in [Restoring with BOSH Backup and Restore](restore.html).
+
+<p class="note"><strong>Note</strong>: Backup artifacts may contain data covered by the European Union's <em>General Data Protection Regulation (GDPR)</em>. Please be mindful that any backup artifacts may contain personal data. For example, a backup of a BOSH deployment could contain user email addresses. As such, backup artifacts should be handled in accordance with organizational policies and applicable laws as they pertain to security, confidentiality, and privacy.</p>
