--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,23 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.3
+
+**Release Date**: June 4, 2018
+
+#### Features
+
+None
+
+#### Bug Fixes
+
+Fix issue where BBR fails if a locking dependency is specified but missing.
+
+#### Known Issues
+
+None
+
+
 ### <a id='1.2'></a> v1.2.2
 
 **Release Date**: April 18, 2018
