Mentions that BBR supports TLS for external dbs and blobstore
[#156760899]

Signed-off-by: Mirah Gary <mgary@pivotal.io>

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -103,6 +103,8 @@ To enable BBR backup and restore for different configurations you must also use 
   </tr>
 </table>
 
+BBR can communicate securely with external blobstores and databases, using TLS, if these are configured accordingly.
+
 ### <a id='supported-external-databases'></a>Supported External Databases
 
 Cloud Foundry components use the backup and restore SDK to interface with databases for backup and restore.
