Add release notes for BBR v1.2.4

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,23 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1.2'></a> v1.2.4
+
+**Release Date**: June 29, 2018
+
+#### Features
+
+None
+
+#### Bug Fixes
+
+* Ability to run against deployments with Windows VMs
+* Built with Go 1.10.3
+
+#### Known Issues
+
+None
+
 ### <a id='1.2'></a> v1.2.3
 
 **Release Date**: June 4, 2018
@@ -20,7 +37,6 @@ Fix issue where BBR fails if a locking dependency is specified but missing.
 #### Known Issues
 
 None
-
 
 ### <a id='1.2'></a> v1.2.2
 
