Add minor edits [#158692295]

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -103,7 +103,7 @@ To enable BBR backup and restore for different configurations you must also use 
   </tr>
 </table>
 
-BBR can communicate securely with external blobstores and databases, using TLS, if these are configured accordingly.
+BBR can communicate with external blobstores and databases over TLS if they are configured accordingly.
 
 ### <a id='supported-external-databases'></a>Supported External Databases
 
