--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -19,13 +19,11 @@ owner: BBR
 }
 </style>
 
-This topic describes configuring an external blobstore so that it can be backed up and restored by BOSH Backup and Restore (BBR).
+This topic explains how to use BOSH Backup and Restore (BBR) to back up and restore external blobstores.
 
-This topic also describes the different restore scenarios for external blobstores and, if necessary, how to prepare the backup artifact for restore.
+BBR supports the backup and restore of blobstores stored in Amazon S3 buckets, S3-compatible storage solutions, and in Azure storage containers.
 
-BBR supports the backup and restore of blobstores stored in Amazon S3 buckets and in S3-compatible storage solutions.
-
-The necessary configuration and supported restore scenarios differ depending on whether your blobstore is versioned or not - for specific details see the sections below.
+The necessary configuration and supported restore scenarios differ depending on the type of blobstore you use. For details, see the sections below.
 
 ## <a id="s3-unversioned"></a> S3-Compatible Unversioned Blobstores
 
@@ -45,7 +43,7 @@ you must colocate the `s3-unversioned-blobstore-backup-restorer` job from [`back
        <p class="note"><strong>Note</strong>: If your S3-compatible blobstore uses a custom CA certificate, refer to <a href="https://bosh.io/docs/trusted-certs.html">Configuring Trusted Certificates</a> in the <a href="https://bosh.io/docs">BOSH documentation</a>.
        BBR automatically makes use of your configured trusted certificates.</p>
 
-1. Create backup buckets for droplets, packages and buildpacks. We recommend that either the backup buckets or copies of them should be in a different region to the live buckets.
+1. Create backup buckets for droplets, packages, and buildpacks. We recommend that either the backup buckets or copies of them should be in a different region to the live buckets.
 
 1. Include the `enable-backup-restore-s3-unversioned.yml` ops file in your deployment.
 
@@ -60,8 +58,7 @@ you must colocate the `s3-unversioned-blobstore-backup-restorer` job from [`back
 
     If you do not use [cf-deployment](https://github.com/cloudfoundry/cf-deployment) and ops files,
     you can still set up your Cloud Foundry deployment to use BBR.
-    You can take the contents of the ops file as an example, and refer to our `backup-and-restore-sdk-release` [documentation](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-unversioned-blobstores) for more details.
-
+    Refer to the contents of the `enable-backup-restore-s3-unversioned.yml` ops file as an example and see the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-unversioned-blobstores) documentation in GitHub for details.
 
 ### <a id="s3-unversioned-supported-restore-scenarios"></a> Supported Restore Scenarios For Your Unversioned S3-Compatible Blobstore
 
@@ -108,7 +105,7 @@ BBR automatically makes use of your configured trusted certificates.</p>
 
     If you do not use [cf-deployment](https://github.com/cloudfoundry/cf-deployment) and ops files,
     you can still set up your Cloud Foundry deployment to use BBR.
-    You can take the contents of the ops file as an example, and refer to our `backup-and-restore-sdk-release` [documentation](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-versioned-blobstores) for more details.
+    Refer to the contents of the `enable-backup-restore-s3-versioned.yml` ops file as an example and see the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-versioned-blobstores) documentation in GitHub for details.
 
 ### <a id="enable-s3-versioning"></a> Enable Versioning on Your S3-Compatible Blobstore
 
@@ -223,21 +220,22 @@ The backup artifact is now ready to be restored from the replicated buckets.
 
 ## <a id="azure"></a> Azure Blobstores
 
-BBR only supports Azure storage containers that have soft delete enabled.
+BBR supports only Azure storage containers with soft delete enabled.
 
-The Azure storage containers are backed up by storing the ETags of each blob, not the actual blobs. This makes backups and restores faster, but also means that **restores only work if the original containers still exist**.
+BBR backs up Azure storage containers by storing the ETags of each blob, not the actual blobs, which makes backups and restores faster. However, this means that restores work only if the original containers still exist.
 
-### <a id="enable-soft-delete"></a> Enable Soft Delete on Your Azure Storage Account
+### <a id="enable-soft-delete"></a> Enable Soft Delete in Your Azure Storage Account
 
-BBR requires the containers to have soft delete enabled. To enable soft delete for your Azure storage account, follow instructions in the [Azure storage documentation](https://docs.microsoft.com/en-us/azure/storage/blobs/storage-blob-soft-delete#quickstart). We strongly recommend to set a reasonable _retention policy_ to minimize storage costs.
+To back up Azure storage containers with BBR, you must enable soft delete in your Azure storage account. 
+To enable soft delete in your Azure storage account, follow the instructions in the [Azure storage documentation](https://docs.microsoft.com/en-us/azure/storage/blobs/storage-blob-soft-delete#quickstart). You should set a reasonable retention policy to minimize storage costs.
 
 ### <a id="enable-azure-replication"></a> Enable Replication on Your Azure Blobstore
 
-BBR does not download your blobs to the backup artifact when performing a backup. Instead, BBR notes the _current ETag_ of each blob and stores the identifiers in the artifact.
+BBR does not download your blobs to the backup artifact when it performs a backup. Instead, BBR records the current ETag of each blob and stores the identifiers in the artifact.
 
-When restoring, BBR reverts your blobs to the original versions using the ETags. Since the backup artifact contains only identifiers, not blobs, BBR can only restore the blobs if the original container containing the blob versions still exists.
+When restoring, BBR reverts your blobs to the original versions using the ETags. Because the backup artifact stores identifiers, not blobs, BBR can restore the blobs only if the original container with the blob versions still exists.
 
-If a datacenter failure in Azure impacts your container, you won't be able to restore it. To prevent this from happening, you can set up [replication](https://docs.microsoft.com/en-us/azure/storage/common/storage-redundancy) for your container.
+An Azure data center failure can render your original container unavailable. Configure replication for your container to mitigate this threat. For more information, see [Azure Storage replication](https://docs.microsoft.com/en-us/azure/storage/common/storage-redundancy) in the Azure documentation.
 
 ### <a id="enable-backup-and-restore-azure"></a> Enable Backup and Restore of Your Azure Blobstore
 
@@ -247,26 +245,24 @@ you must colocate the `azure-blobstore-backup-restorer` job from <a href="https:
 To do this, include the `enable-backup-restore-azure.yml` ops file in your deployment.
 
 <p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-azure-storage-blobstore.yml</code>
-   before <code>enable-backup-restore-azure.yml</code>.
-   See <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.
+before <code>enable-backup-restore-azure.yml</code>.
+For more information, see <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.
 </p>
 
 If you do not use <a href="https://github.com/cloudfoundry/cf-deployment">cf-deployment</a> and ops files,
 you can still set up your Cloud Foundry deployment to use BBR.
-You can take the contents of the ops file as an example, and refer to our `backup-and-restore-sdk-release` <a href="https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#azure-blobstores">documentation</a> for more details.
+Refer to the contents of the `enable-backup-restore-azure.yml` ops file as an example and see the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#azure-blobstores) documentation in GitHub for details.
 
-### <a id="azure-blobstore-supported-restore-scenarios"></a> Supported Restore Scenarios For Your Azure Blobstore
+### <a id="azure-blobstore-supported-restore-scenarios"></a> Supported Restore Scenarios for Your Azure Blobstore
 
-There are three distinct restore scenarios:
+Determine which of the following scenarios applies to your deployment before beginning a restore:
 
 + <a href="#azure-in-place-restore">In-Place Restore</a>
 + <a href="#azure-restore-to-new-containers">Restore to New Containers</a>
-+ <a href="#azure-restore-to-different-storage-account">Restore to New Container in different storage account</a>
-
-Make sure that you understand which scenario applies to you before beginning a restore.
++ <a href="#azure-restore-to-different-storage-account">Restore to New Container in Different Storage Account</a>
 
 <p class="note">
-  When restoring to a container, BBR will only modify blobs that are recorded in the backup artifact. Any other blobs will not be affected.
+When restoring to a container, BBR modifies only blobs that are recorded in the backup artifact. Other blobs are not affected.
 </p>
 
 #### <a id="azure-in-place-restore"></a> In-Place Restore
@@ -276,17 +272,17 @@ If your destination Cloud Foundry for a restore uses the original containers of 
 
 #### <a id="azure-restore-to-new-containers"></a> Restore to New Containers
 
-If your destination Cloud Foundry for a restore uses different containers, BBR will copy the versions recorded in the backup artifact from the backed up containers to the new containers.
-This means that those backed up containers have to exist during the restore. New containers also have to belong to the same Azure storage account as the backed up containers.
+If your destination Cloud Foundry for a restore uses different containers, BBR copies the versions recorded in the backup artifact from the backed-up containers to the new containers.
+This means that those backed-up containers have to exist during the restore. New containers must belong to the same Azure storage account as the backed-up containers.
 
-#### <a id="azure-restore-to-different-storage-account"></a> Restore to New Container in different storage account
+#### <a id="azure-restore-to-different-storage-account"></a> Restore to New Container in Different Storage Accounts
 
 Your destination Cloud Foundry for a restore can use a different Azure storage account for your Azure blobstore.
-In this case BBR will copy the blobs from the backed up containers from the source Azure storage account to the new containers in the storage account used for restore.
-You need to use `enable-restore-azure-clone.yml` ops file in your deployment.
+In this case, BBR copies the blobs from the backed-up containers from the source Azure storage account to the new containers in the storage account used for restore.
+You must use the `enable-restore-azure-clone.yml` ops file in your deployment.
 
 <p class="note"><strong>Note</strong>: Apply <code>enable-backup-restore.yml</code> and <code>use-azure-storage-blobstore.yml</code>
-   before <code>enable-restore-azure-clone.yml</code>.
-   See <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
+before <code>enable-restore-azure-clone.yml</code>.
+For more information, see <a href="cf-backup.html#order">Apply Ops Files in the Correct Order</a>.</p>
 
-After restoring, replace the `enable-restore-azure-clone.yml` ops file in your deployment with the `enable-backup-restore-azure.yml` opsfile and redeploy.
+After restoring, replace the `enable-restore-azure-clone.yml` ops file in your deployment with the `enable-backup-restore-azure.yml` ops file and redeploy.
