--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -273,7 +273,7 @@ In this scenario, the backed-up containers must exist during the restore.
 
 #### <a id="azure-restore-to-different-storage-account"></a> Restore to a New Container in a Different Storage Account
 
-Your can restore you Cloud Foundry deployment to a container in a different Azure storage account from the original.
+You can restore your Cloud Foundry deployment to a container in a different Azure storage account from the original.
 In this scenario, BBR copies the blobs from the backed-up containers from the source Azure storage account to the new containers in the storage account used for restore.
 You must use the `enable-restore-azure-clone.yml` ops file in your deployment.
 
